deployment/k8s/ingress/ingress-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-ingress-dashboard


# TODO: come back when adding grafana and prometheus
