deployment/k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: True
    ingress.kubernetes.io/force-ssl-redirect: True


spec:
  rules:
    - host: hr.com
      http:
        paths:
          - path: /hr/(.*)
            pathType: Prefix
            backend:
              service:
                name: hr-service
                port:
                  number: 8081

# TODO: add tls certificate in a secret manifest
